--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 
     <script src="trabajo-a.js"></script>
     <script src="trabajo-b.js"></script>
-    
+    <script src="trabajo-c.js"></script>
 </body>
 </html>
